# Windowing-Template

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  FORKING.md  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  bitbucket-pipelines.yml  sonar-project.properties
.android/: debug.keystore  release.keystore
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: issue-branch.yml
.github/workflow/: platform_android.yml  platform_ios.yml  platform_linux.yml  platform_macos.yml  platform_windows.yml  shared.yml
.github/workflows/: azure_mirror.yml  bitbucket_mirror.yml  build.yml  clippy.yml  coverage.yml  gitlab_mirror.yml  multiplatform-build.yml  platform_android.yml  platform_ios.yml  platform_linux.yml  platform_macos.yml  platform_webassembly.yml  platform_windows.yml  shared.yml  trigger_ci_merger.yml  upstream.yml  upstream_merger.yml
.jenkins/: Jenkinsfile
.teamcity/: pom.xml  settings.kts
platform/android/: Cargo.toml  README.md
platform/android/src/: lib.rs
platform/android/src/tests/: mod.rs
platform/ios/: Cargo.toml  README.md
platform/ios/src/: lib.rs
platform/ios/src/tests/: mod.rs
platform/linux/: Cargo.toml  README.md
platform/linux/src/: main.rs
platform/macos/: Cargo.toml  README.md
platform/macos/src/tests/: mod.rs
platform/webassembly/: Cargo.toml  README.md  index.html
platform/webassembly/src/: lib.rs
platform/webassembly/src/tests/: mod.rs
platform/windows/: Cargo.toml  README.md
platform/windows/src/tests/: mod.rs
shared/: Cargo.toml  README.md
shared/src/: lib.rs
shared/src/tests/: mod.rs
