[package]
name = "shared"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-multiplatform/Windowing-Template.git"

[features]
default = ["all-tests", "ui"]
ui = []
ui-tests = ["ui"]
all-tests = ["ui-tests"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
winit = "0.27.3"
