[package]
name = "platform_android"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-multiplatform/Windowing-Template.git"

[features]
default = ["all-tests"]
ui-tests = []
all-tests = ["ui-tests"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
shared = { path = "../../shared" }

# This dependency will only be included when targeting Android
[target.'cfg(target_os = "android")'.dependencies]
android-activity = "0.4"
android_logger = "0.13"

[package.metadata.android]
# Specifies the package property of the manifest.
package = "de.sakulflee.rust_multiplatform_app"

# Specifies the array of targets to build for.
build_targets = [
    "armv7-linux-androideabi",
    "aarch64-linux-android",
    "i686-linux-android",
    "x86_64-linux-android",
]

# Path to your application's resources folder.
# If not specified, resources will not be included in the APK.
resources = "resources/"

# Path to the folder containing your application's assets.
# If not specified, assets will not be included in the APK.
assets = "assets/"

# Name for final APK file.
# Defaults to package name.
apk_name = "Hello-Rust"

# Folder containing extra shared libraries intended to be dynamically loaded at runtime.
# Files matching `libs_folder/${android_abi}/*.so` are added to the apk
# according to the specified build_targets.
# runtime_libs = "path/to/libs_folder"

# See https://developer.android.com/guide/topics/manifest/uses-sdk-element
[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 30
max_sdk_version = 30

# Defaults to `$HOME/.android/debug.keystore` for the `dev` profile. Will ONLY generate a new
# debug.keystore if this file does NOT exist.
# A keystore path is always required on the `release` profile.
[package.metadata.android.signing.dev]
path = ".android/debug.keystore"
keystore_password = "android"
[package.metadata.android.signing.release]
path = ".android/release.keystore"
keystore_password = "android"

# See https://developer.android.com/guide/topics/manifest/uses-feature-element
#
# Note: there can be multiple .uses_feature entries.
[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

# See https://developer.android.com/guide/topics/manifest/application-element#debug
#
# Defaults to false.
debuggable = false

# See https://developer.android.com/guide/topics/manifest/application-element#theme
#
# Example shows setting the theme of an application to fullscreen.
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

# Virtual path your application's icon for any mipmap level.
# If not specified, an icon will not be included in the APK.
icon = "@mipmap/ic_launcher"

# See https://developer.android.com/guide/topics/manifest/application-element#label
#
# Defaults to the compiled artifact's name.
label = "platform-android"

# See https://developer.android.com/guide/topics/manifest/activity-element#config
#
# Defaults to "orientation|keyboardHidden|screenSize".
config_changes = "orientation"

# See https://developer.android.com/guide/topics/manifest/activity-element#lmode
#
# Defaults to "standard".
launch_mode = "singleTop"

# See https://developer.android.com/guide/topics/manifest/activity-element#screen
#
# Defaults to "unspecified".
orientation = "landscape"

# See https://developer.android.com/guide/topics/manifest/activity-element#exported
#
# Unset by default, or "true" when targeting Android >= 31 (S and up).
exported = "true"
