[package]
name = "platform_ios"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-multiplatform/Base-Project-Template.git"

[features]
default = ["all-tests"]
ui-tests = []
all-tests = ["ui-tests"]

[lib]
crate-type = ["staticlib"]

[dependencies]
shared = { path = "../../shared" }

[package.metadata.ios]
# Specifies the array of targets to build for.
build_targets = ["aarch64-apple-ios", "aarch64-apple-ios-sim", "x86_64-apple-ios"]

# Specifies the array of dependencies sdk. Empty by default.
dependencies = ["Security.framework", "UIKit.framework"]

# Specifies deployment target. "12" by default.
deployment_target = "12.0"

# Specifies bundleIdPrefix. "com.rust" by default.
bundle_id_prefix = "com.rust.game"

# Specifies CODE_SIGN_IDENTITY.
code_sign_identity = "Apple Developer"

# Specifies DEVELOPMENT_TEAM.
development_team = "SakulFlee"

# Specifies device id and device type.
device_id = "YOUR DEVICE ID HERE --- CHECK README"
device_type = "simulator" # or "device".

# Specifies an assets folder.
assets = ["assets/"]
