[package]
name = "platform_webassembly"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-multiplatform/Base-Project-Template.git"

[features]
default = ["all-tests"]
ui-tests = []
all-tests = ["ui-tests"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal
shared = { path = "../../shared" }
# External
wasm-bindgen = "0.2.83"

[dev-dependencies]
wasm-bindgen-test = "0.3"
